Fix layout issues on iphone

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -27,6 +27,7 @@
 .topnav ul {
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 
 .topnav ul li {
