--- a/src/components/Transactions/transactions.css
+++ b/src/components/Transactions/transactions.css
@@ -1,7 +1,3 @@
-.transaction-accounts {
-  padding-top: 16px;
-}
-
 .transactions {
   font-size: small;
 }
@@ -33,7 +29,7 @@
   width: 24px;
   position: absolute;
   right: 8px;
-  bottom: 12px;
+  top: 8px;
   cursor: pointer;
   color: #4682b4;
   text-decoration: underline;
@@ -51,26 +47,33 @@
   margin-top: 8px;
 }
 
-.tiny-transaction {
-  display: grid;
-  grid-template-columns: 15% 20% 30% 30% 5%;
-}
-
 .transaction-date {
   color: black;
 }
 
 .summary {
   display: grid;
-  grid-template-columns: 15% 80% 5%;
+  grid-template-columns: 15% 40% 40% 5%;
 }
-
 .transaction-section {
   background-color: white;
   border: 1px dashed #4682b4;
   margin-top: 8px;
   margin-right: 32px;
   padding: 8px;
+}
+
+@media screen and (max-width: 600px) {
+  .summary {
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    grid-gap: 1em;
+    padding-right: 8px;
+  }
+
+  .transaction-section {
+    margin-right: 0px;
+  }
 }
 
 .value {
